<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_baground"
    android:orientation="vertical"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/overAllExam"
        android:textColor="@color/dodger_blue"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/layout25Min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round_back_selected_option"
        android:orientation="horizontal"
        android:padding="18dp">

        <LinearLayout
            android:id="@+id/iconBackground1"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_centerVertical="true"
            android:background="@drawable/round_back_white50_100">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/option25Icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="3dp"
                android:scaleType="fitXY"
                app:riv_corner_radius="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/option25Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/question50"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout50Min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round_back_selected_option"
        android:orientation="horizontal"
        android:padding="18dp">

        <LinearLayout
            android:id="@+id/iconBackground2"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:background="@drawable/round_back_white50_100">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/option50Icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="3dp"
                android:scaleType="fitXY"
                app:riv_corner_radius="10dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/option50Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/question100"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"

            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout100Min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round_back_selected_option"
        android:orientation="horizontal"
        android:padding="18dp">


        <LinearLayout
            android:id="@+id/iconBackground3"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_centerVertical="true"
            android:background="@drawable/round_back_white50_100">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/option100Icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="3dp"
                android:scaleType="fitXY"
                app:riv_corner_radius="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/option100Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/question200"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnExamStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_round_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/start_exam"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/not_now"
        android:textColor="@color/tangerine"
        android:textSize="20sp" />

</LinearLayout>