<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statics"
        android:textColor="@color/LiteBlack"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/round_back_white50_10"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Exam_Statistic"
                android:textColor="@color/LiteBlack"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/totalExam"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/totalExamTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="0"
                android:textColor="@color/LiteBlack"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="35dp"
                android:text="Passed  Exam"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="0"
                android:textColor="@color/LiteBlack"
                android:textSize="16sp"
                android:visibility="gone" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/DeepGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/totalQuestion"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/totalQuestionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="0"
                android:textColor="@color/LiteBlack"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correct"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/correctAnswerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:text="0 (0.0%)"
                android:textColor="@color/LiteBlack"
                android:textSize="16sp" />

        </LinearLayout>


        <ProgressBar
            android:id="@+id/percentageProgressBarCorrect"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginTop="10dp"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/bg_for_green_progressbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ভুল"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/wrongAnswerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:text="0 (0.0%)"
                android:textColor="@color/LiteBlack"
                android:textSize="16sp" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/percentageProgressBarWrong"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginTop="10dp"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/bg_for_progressbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notAnswred"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/notAnswredTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:text="0 (0.0%)"
                android:textColor="@color/LiteBlack"
                android:textSize="16sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/percentageProgressBarNotAnswred"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginTop="10dp"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/bg_for_lite_progressbar" />
    </LinearLayout>
</LinearLayout>