<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragment.MoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/more"
                    android:textColor="@color/dodger_blue"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="@dimen/_4sdp">

            <LinearLayout
                android:id="@+id/messengerChat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/messenger" />

                <TextView
                    android:id="@+id/btnMessengerChat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/messangerChat"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/facebookGroup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/facebook" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/facebookPage"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/appRating"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/baseline_star_rate_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/appRating"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:id="@+id/shareBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/baseline_share_24"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="অ্যাপ শেয়ার"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/baseline_info_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/about_us"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/baseline_privacy_tip_24"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/privircy_policy"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/termsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/terms" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/trems"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>


        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:background="@color/white"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:id="@+id/logOutButton"-->
        <!--            android:orientation="horizontal">-->

        <!--            <com.makeramen.roundedimageview.RoundedImageView-->
        <!--                android:layout_width="40dp"-->
        <!--                android:layout_marginTop="5dp"-->
        <!--                android:layout_marginStart="10dp"-->
        <!--                android:src="@drawable/baseline_logout_24"-->
        <!--                android:layout_height="40dp"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:text="@string/lig_unt"-->
        <!--                android:background="@color/white"-->
        <!--                android:gravity="center_vertical"-->
        <!--                android:padding="10dp"-->
        <!--                android:textSize="17sp"-->
        <!--                android:textColor="@color/black"-->
        <!--                />-->
        <!--        </LinearLayout>-->


    </LinearLayout>


</LinearLayout>